# micro-vendas

./: .env.sample  README.md  pyproject.toml
apps/dashboard/: urls.py  views.py
apps/dashboard/templates/dashboard/: index.html
apps/empresas/: admin.py  models.py
apps/empresas/migrations/: 0001_initial.py
apps/produtos/: admin.py  forms.py  models.py  urls.py  views.py
apps/produtos/migrations/: 0001_initial.py
apps/produtos/templates/produtos/: produto_confirm_delete.html  produto_form.html  produto_list.html
apps/usuarios/: urls.py
apps/usuarios/templates/registration/: login.html
apps/vendas/: admin.py  models.py  urls.py  views.py
apps/vendas/migrations/: 0001_initial.py  0002_carrinho_produtocarrinho.py  0003_venda_empresa.py  0004_alter_venda_options.py
apps/vendas/services/: vendas.py
apps/vendas/templates/vendas/: novo_pedido.html  pedido.html  venda_list.html
config/: settings.py  urls.py
shared/: forms.py  utils.py
templates/layout/: base.html
templates/partials/: header.html  messages.html  navbar.html  sidebar.html  toastr.html
