[project]
name = "micro-vendas"
version = "0.1.0"
description = ""
authors = [
    {name = "Bruno R. Pianca",email = "brunorpdev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (==4.2.*)",
    "python-decouple (>=3.8,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
